--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-<title>HTW Anfahrtskizze</title>
+<title>HTW Anfahrtsskizze</title>
 <meta http-equiv="imagetoolbar" content="no"/>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> <!-- because of mobile -->
@@ -108,7 +108,7 @@ if (Browser >= 4) window.print();
 </script>
 </head>
 <body onload="init();">
-<div id="header"><h1>HTW Anfahrtskizze</h1></div><div id="subheader">Map subtitle</div>
+<div id="header"><h1>HTW Anfahrtsskizze</h1></div><div id="subheader">im Bau</div>
 <div id="map"></div>
 <script type="text/javascript" >resize()</script>
 <div>
