--- a/nochNTee10malgeteste.html
+++ b/nochNTee10malgeteste.html
@@ -108,12 +108,17 @@ if (Browser >= 4) window.print();
 </script>
 </head>
 <body onload="init();">
-<div id="header"><h1>HTW Anfahrtsskizze</h1></div><div id="subheader">Map subtitle</div>
+<div id="header"><h1>HTW Anfahrtsskizze</h1></div>
+<div id="subheader">
+Daten von <a href="http://www.openstreetmap.org/">OpenStreetMap</a> - Veroeffentlicht unter 
+<a href="http://opendatacommons.org/licenses/odbl/">ODbL</a>
+</div>
 <div id="map"></div>
 <script type="text/javascript" >resize()</script>
 <div>
 <button type="button" onclick="SeiteDrucken()" style="position:absolute;left:43.2%; top: 0%";>Druckvorschau</button>
 <button type="button" onclick="geoLoc()" style="position:absolute;left:50%; top: 0%";> Geoloc</button>
 </div>
+
 </body>
 </html>
