--- a/nochNTee10malgeteste.html
+++ b/nochNTee10malgeteste.html
@@ -1,124 +1,200 @@
 <!DOCTYPE html>
-<html >
+       
+<html>
 <head>
 <title>HTW Anfahrtsskizze</title>
 <meta http-equiv="imagetoolbar" content="no"/>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> <!-- because of mobile -->
+<script src="proj4js/lib/proj4js.js"></script> 
+<script src="scripts/BasicFunctions.js" type="text/javascript"></script>
+<script src="openlayers/OpenLayers.js" type="text/javascript"></script>
+<!--<script src="proj4js/lib/defs/EPSG32633.js"></script> -->                  
 <style type="text/css">
-html, body, #map{height: 100%;} 
-body { margin: 0; padding:0; background: #FFFFFF; }
+
+body { 
+		padding:0;
+		margin: 0;  
+		background: #FFFFFF; 
+}
+html, body, #map{
+	height: 100%;
+} 
 h1 { color: #000000; margin: 0; padding: 6px; border:0; font-size: 20pt; }
 #header { height: 43px; padding: 0; background-color: #FFFFFF; border: 1px solid #000000; }
 #subheader { height: 12px; margin: 6px; text-align: right; font-size: 10px; color: #000000; background-color: #FFFFFF;}
-
 #mapdata { position: absolute; margin-right: 0.5%; right: 1%; width: 18%; height: 85%; border: 1px solid #000000; }
 </style>
-<link rel="stylesheet" type="text/css" href="css/autosuggest.css" />
-<script src="scripts/BasicFunctions.js" type="text/javascript"></script>
-<script src="scripts/OpenLayers.js" type="text/javascript"></script>
-<script src="scripts/MapPois.js" type="text/javascript"></script>
-<script src="scripts/AutoSuggest.js" type="text/javascript"></script>
 <script type="text/javascript">
 
+    // ------------ Pro4js Stuff! -----------------------
+    var srcProj = new Proj4js.Proj('WGS84');
+    var destProj = new Proj4js.Proj('EPSG:32633');
+
+    // ------------ OpenLayers Stuff! -------------------
+
 	var WGS84 = new OpenLayers.Projection("EPSG:4326");
-	var WGS84_google_mercator = new OpenLayers.Projection("EPSG:900913");
-	
-	var markers = new OpenLayers.Layer.Markers( "Markers" );
+	var UTMzone33 = new OpenLayers.Projection("EPSG:32633");
+
 	var size = new OpenLayers.Size(21,25);
 	var offset = new OpenLayers.Pixel(-(size.w/2), -size.h);
-	var icon = new OpenLayers.Icon('http://www.openlayers.org/dev/img/marker.png', size, offset);
-
-    var map, basemap, vector_layer, edit_vector_layer;
-    var _poiLayers = new Array();
-    var mapBounds = new OpenLayers.Bounds(399932.900000,5648425.600000,422842.100000,5668180.700000);
+    var icon = new OpenLayers.Icon(
+            'http://www.openlayers.org/dev/img/marker.png',
+            size, offset);
+    var map, basemap, markers;
+    var mapBounds = new OpenLayers.Bounds(
+            399932.900000,5648425.600000,
+            422842.100000,5668180.700000);
     var mapMinZoom = 1;
-    var mapMaxZoom = 7;
-    var _mapPoi = new Array();
-    var _mapSuggestNames = new Array();
-    OpenLayers.IMAGE_RELOAD_ATTEMPTS = 3;
-    OpenLayers.Util.onImageLoadErrorColor = "transparent";
-    var AutoSizeFramedCloud = OpenLayers.Class(OpenLayers.Popup.FramedCloud, { 'autoSize': true });
+    var mapMaxZoom = 6;
+    var maxRes = 54.186667;
+
+    /* Onclick Handler */
+    OpenLayers.Control.Click = OpenLayers.Class(OpenLayers.Control, {                
+        defaultHandlerOptions: {
+            'single': true,
+            'double': false,
+            'pixelTolerance': 0,
+            'stopSingle': false,
+            'stopDouble': false
+        },
+
+        initialize: function(options) {
+            this.handlerOptions = OpenLayers.Util.extend(
+                {}, this.defaultHandlerOptions
+            );
+            OpenLayers.Control.prototype.initialize.apply(
+                this, arguments
+            ); 
+            this.handler = new OpenLayers.Handler.Click(
+                this, {
+                    'click': this.trigger
+                }, this.handlerOptions
+            );
+        },
+
+        trigger: function(e) {
+            var lonlat = map.getLonLatFromPixel(e.xy);
+            alert("You clicked near " + lonlat.lat + " N, " +
+                                      + lonlat.lon + " E");
+        }
+
+    });
+
     function init() {
 		var options = {
 			controls: [
 				new OpenLayers.Control.MousePosition({div:document.getElementById("coordinates")})
 				],
-			maxExtent : new OpenLayers.Bounds(399932.900000,5648425.600000,422842.100000,5668180.700000),
-			maxResolution: 54.186667,
-			numZoomLevels: 6,
-			//projection: WGS84_google_mercator,
-			//displayProjection: WGS84,
+			maxExtent : mapBounds,
+			maxResolution: maxRes,
+			numZoomLevels: mapMaxZoom,
+			projection: UTMzone33,
 		};
 
 		map = new OpenLayers.Map('map', options);
-
-		basemap = new OpenLayers.Layer.TMS( "Base layer", "",
-			{ url: '', serviceVersion: '.', layername: '.', alpha: false,
-			type: 'gif', getURL: overlay_getTileURL, transitionEffect: resize });
-
+		basemap = new OpenLayers.Layer.TMS( "Base layer", "", {
+                url: '',
+                serviceVersion: '.',
+                layername: '.',
+                alpha: false,
+			    type: 'gif',
+                getURL: overlay_getTileURL,
+                transitionEffect: resize }  );
 		map.addLayer(basemap);
 		map.zoomToExtent(mapBounds);
 		map.addControl(new OpenLayers.Control.PanZoomBar({ zoomStopHeight: 15	}));
 		map.addControl(new OpenLayers.Control.Navigation());
-		map.addControl(new OpenLayers.Control.MousePosition({	numDigits: 0 }));
-		map.addControl(new OpenLayers.Control.Permalink());
+		//map.addControl(new OpenLayers.Control.MousePosition({	numDigits: 0 }));
+		//map.addControl(new OpenLayers.Control.Permalink());
 		map.addControl(new OpenLayers.Control.LayerSwitcher());
+
 		var ov_mapoptions = {
-			maxExtent : new OpenLayers.Bounds(399932.900000,5648425.600000,422842.100000,5668180.700000),
-			maxResolution: 54.186667,
-			numZoomLevels: 6
+			maxExtent : mapBounds,
+			maxResolution: maxRes,
+			numZoomLevels: mapMaxZoom,
 			};
-		var ov_options = { mapOptions: ov_mapoptions};
-		map.addControl(new OpenLayers.Control.OverviewMap(ov_options));
+
+        var ov_options = { mapOptions: ov_mapoptions};
+		map.addControl(new OpenLayers.Control.OverviewMap(ov_options));	
+
+        markers = new OpenLayers.Layer.Markers( "Markers" );
+        map.addLayer(markers);
+
+		var click = new OpenLayers.Control.Click();
+        map.addControl(click);
+        click.activate();
+    }
+    onresize=function(){ resize(); };
+
+
+   /* function transform() {
+        var testP, newPoint, pos;
+        var xVal = '13.733278';
+        var yVal = '51.051181';
+        alert('Transformiere: '+xVal+', '+yVal+'(Postplatz)\nnach UTM33');
+
+        testP = new Proj4js.Point(xVal+','+yVal);
+        newPoint = Proj4js.transform(srcProj, destProj, testP);
+        alert(newPoint);
+
+        pos = new OpenLayers.LonLat(newPoint.x,newPoint.y);
+        map.setCenter(pos,4);
+        markers.addMarker(
+                new OpenLayers.Marker(pos,icon.clone())
+                );
+    } */
+
+    function geoLoc() {
+        var lat, lon, geoLocPoint, transformPoint, pos;
+        navigator.geolocation.getCurrentPosition(erfolg, fehler);
+        function erfolg(position){
+            lat = position.coords.latitude;
+            lon = position.coords.longitude;
+            alert('Transformiere: '+lon+', '+lat+'(JS Geolocation)\n nach UTM33');
+
+            geoLocPoint = new Proj4js.Point(lon+','+lat);
+            transformPoint = Proj4js.transform(srcProj, destProj, geoLocPoint);
+            alert(transformPoint);
+
+            pos = new OpenLayers.LonLat(transformPoint.x, transformPoint.y);
+			alert (pos);
+            map.setCenter(pos,4);
+            markers.addMarker(new OpenLayers.Marker(pos,icon.clone()));
+
+        }
+        function fehler(meldung) {
+            alert(
+                    typeof meldung == 'string' ? meldung : "Es ist ein unbekannter Fehler aufgetreten."
+            );
+        }
+    }
 	
-		}
-  onresize=function(){ resize(); };
-  
-
-
-
-function SeiteDrucken() {
-focus();
-Browser = parseInt(navigator.appVersion);
-if (Browser >= 4) window.print();
-}
-  
-  
-  
-  function geoLoc() {
-	var lat, lon
-	navigator.geolocation.getCurrentPosition(erfolg, fehler);
-	function erfolg(position){
-		lat = position.coords.latitude;
-		lon = position.coords.longitude;
-		alert(lat + "; " + lon);
-		var pos = new OpenLayers.LonLat(lon, lat);
-		map.setCenter(pos,4);
-		
-		map.addLayer(markers);
-		markers.addMarker(new OpenLayers.Marker(pos,icon));
-	}
-	function fehler(meldung)
-		{alert(typeof meldung == 'string' ? meldung : "Es ist ein unbekannter Fehler aufgetreten.");}
-
+	function SeiteDrucken() {
+			focus();
+			Browser = parseInt(navigator.appVersion);
+			if (Browser >= 4) window.print();
 	}
 
-  
 </script>
+
+
 </head>
 <body onload="init();">
-<div id="header"><h1>HTW Anfahrtsskizze</h1></div>
-<div id="subheader">
-Daten von <a href="http://www.openstreetmap.org/">OpenStreetMap</a> - Veroeffentlicht unter 
-<a href="http://opendatacommons.org/licenses/odbl/">ODbL</a>
-</div>
-<div id="map"></div>
-<script type="text/javascript" >resize()</script>
-<div>
-<button type="button" onclick="SeiteDrucken()" style="position:absolute;left:43.2%; top: 0%";>Druckvorschau</button>
-<button type="button" onclick="geoLoc()" style="position:absolute;left:50%; top: 0%";> Geoloc</button>
-</div>
-
+<div id="header"><h1>HTW Anfahrtsskizze</h1></div><div id="subheader">Daten von <a href="http://www.openstreetmap.org/">OpenStreetMap</a> - Veroeffentlicht unter
+																				<a href="http://opendatacommons.org/licenses/odbl/">ODbL</a></div>
+    <div id="map"></div>
+        <!--<button onclick="transform();">Postplatz</button>-->
+		<a href="javascript:SeiteDrucken()">Seite drucken</a>
+		<a href="javascript:geoLoc()">aktueller Standort</a>
+		<a href="http://www.htw-dresden.de/">HTW Dresden</a> 
+       
+		
+		<!--Link HompageHTW-->
+		<!--Vektoren???-->
+		
+    </div>
+   
+    <script type="text/javascript" >resize();</script>
 </body>
 </html>
